# clucene

./: Makefile.am  Makefile.in  bootstrap  config.h.in  configure  configure.ac
contributions/highlighter/: Formatter.cpp  Formatter.h  Fragmenter.cpp  Fragmenter.h  Highlighter.cpp  Highlighter.h  QueryScorer.cpp  QueryScorer.h  QueryTermExtractor.cpp  QueryTermExtractor.h  Scorer.h  SimpleFragmenter.cpp  SimpleFragmenter.h  SimpleHTMLFormatter.cpp  SimpleHTMLFormatter.h  TextFragment.cpp  TextFragment.h  WeightedTerm.cpp  WeightedTerm.h  highlighter.vcproj  stdafx.cpp
examples/: Makefile.am  Makefile.in
examples/demo/: DeleteFiles.cpp  IndexFiles.cpp  Main.cpp  Makefile.am  Makefile.in  SearchFiles.cpp  Statistics.cpp  demo.sln  demo.vcproj  stdafx.h
examples/doc/: BUGS.txt  INSTALL  Readme.txt  TODO.txt  changes.txt  tests.txt
examples/searchCS/: Class1.cs  searchCS.csproj  searchCS.sln
examples/tests/: Main.cpp  Makefile.am  Makefile.in  stdafx.h  tests.sln  tests.vcproj
examples/tests/test/: AnalysisTest.cpp  AnalyzersTest.cpp  HighFreqTerms.cpp  HighlightTest.cpp  Makefile.am  PriorityQueue.cpp  PriorityQueue.h  QueryParser.cpp  SearchTest.cpp  SearchTestForDuplicates.cpp  StoreTest.cpp  TestDateFilter.cpp  TestPriorityQueue.cpp  TestQueryParser.cpp  TestWildcard.cpp
examples/tests/todo/: DocTest.java  TermInfosTest.java  ThreadSafetyTest.java
examples/util/: Main.cpp  Makefile.am  Makefile.in  add.cpp  delete.cpp  keys.cpp  merge.cpp  optimize.cpp  search.cpp  stats.cpp  stdafx.cpp  stdafx.h  util.sln  util.vcproj
src/: Makefile.am  Makefile.in  do_nothing.cc
src/CLucene/: LuceneUTF8.cpp  Makefile.am  StdHeader.cpp
src/CLucene/analysis/: Analyzers.cpp  Makefile.am
src/CLucene/analysis/standard/: Makefile.am  StandardAnalyzer.cpp  StandardFilter.cpp  StandardTokenizer.cpp
src/CLucene/debug/: Makefile.am  condition.c
src/CLucene/document/: DateField.cpp  Document.cpp  Field.cpp  Makefile.am
src/CLucene/index/: DocumentWriter.cpp  FieldInfos.cpp  FieldsReader.cpp  FieldsWriter.cpp  IndexReader.cpp  IndexWriter.cpp  Makefile.am  SegmentInfos.cpp  SegmentMergeInfo.cpp  SegmentMergeQueue.cpp  SegmentMerger.cpp  SegmentReader.cpp  SegmentTermDocs.cpp  SegmentTermEnum.cpp  SegmentTermPositions.cpp  SegmentsReader.cpp  Term.cpp  TermInfo.cpp  TermInfosReader.cpp  TermInfosWriter.cpp
src/CLucene/queryParser/: Lexer.cpp  Makefile.am  MultiFieldQueryParser.cpp  QueryParser.cpp  QueryParserBase.cpp  QueryToken.cpp  TokenList.cpp
src/CLucene/search/: BooleanQuery.cpp  BooleanScorer.cpp  DateFilter.cpp  ExactPhraseScorer.cpp  FilteredTermEnum.cpp  FuzzyQuery.cpp  HitQueue.cpp  Hits.cpp  IndexSearcher.cpp  Makefile.am  MultiSearcher.cpp  MultiTermQuery.cpp  PhrasePositions.cpp  PhraseQuery.cpp  PhraseScorer.cpp  PrefixQuery.cpp  RangeQuery.cpp  Similarity.cpp  SloppyPhraseScorer.cpp  TermQuery.cpp  TermScorer.cpp  TopDocs.cpp  WildcardQuery.cpp  WildcardTermEnum.cpp
src/CLucene/store/: FSDirectory.cpp  InputStream.cpp  Lock.cpp  Makefile.am  OutputStream.cpp  RAMDirectory.cpp  TransactionalRAMDirectory.cpp
src/CLucene/util/: Arrays.cpp  BitVector.cpp  FastCharStream.cpp  Makefile.am  Misc.cpp  Reader.cpp  StringBuffer.cpp  dirent.cpp
wrappers/: Makefile.am  Makefile.in
wrappers/CLuceneDotNet/: Analysis.cpp  Analysis.h  AssemblyInfo.cpp  CLuceneDotNet.sln  CLuceneDotNet.vcproj  Index.cpp  Index.h  MDocument.cpp  MDocument.h  Managed.cpp  Managed.h  Search.cpp  Search.h  Stdafx.cpp  Stdafx.h
wrappers/dll/: Makefile.am  Makefile.in  clucene_dll.cpp  clucene_dll.h  dll.sln  dll.vcproj
wrappers/dll/dlltest/: Makefile.am  Makefile.in  dlltest.cpp  dlltest.vcproj  stdafx.h
wrappers/perl/: INSTALL  MANIFEST  Makefile  clucene.i  clucene_test.pl
wrappers/perl/FulltextSearch/: CLucene.pm
wrappers/php/: INSTALL  cltest.php  clucene.vcproj  config.m4  php_clucene.c  php_clucene.h  php_clucene.sln  php_clucene.txt  php_clucene.vcproj
wrappers/python/: MANIFEST  README.txt  _clucene_wrap.cpp  _clucene_wrap.h  compile-mingw.bat  compile-msvc.bat  compile.sh  pyclene.h  pyclene.i  pyclene_typemaps.i  setup.cfg  supp_analysis.cpp  supp_analysis.h  supp_document.cpp  supp_index.cpp  supp_props.i  supp_search.cpp  supp_util.cpp  swig-run.bat
wrappers/python/CLucene-SWIG-overrides/: README.txt
wrappers/python/CLucene-SWIG-overrides/CLucene/index/: IndexReader.i  IndexWriter.i  Term.i  Terms.i
wrappers/python/CLucene-SWIG-overrides/CLucene/search/: FilteredTermEnum.i  IndexSearcher.i  SearchHeader.i  TopDocs.i
wrappers/python/CLucene-SWIG-overrides/CLucene/store/: FSDirectory.i  InputStream.i  Lock.i  RAMDirectory.i
wrappers/python/doc/: build.txt  code-standards.txt  test.txt
wrappers/python/tests/: python_debug  valgrind_suppressions.supp  vg_full.sh  vg_preponly.sh
wrappers/python/tests/data/: bait_token_1.txt  bait_token_2.txt  term_decoy_single.txt  utf8_3_byte_char.txt
