AUTOMAKE_OPTIONS = 1.6

include_HEADERS = CLucene.h

lsrcdir = $(top_srcdir)/src/CLucene
 
lib_LTLIBRARIES        = libclucene.la 
 
libclucene_la_SOURCES  =
 
include CLucene/analysis/Makefile.am
include CLucene/analysis/standard/Makefile.am
include CLucene/debug/Makefile.am
include CLucene/document/Makefile.am
include CLucene/index/Makefile.am
include CLucene/queryParser/Makefile.am
include CLucene/search/Makefile.am
include CLucene/store/Makefile.am
include CLucene/util/Makefile.am
include CLucene/Makefile.am
