MAINTAINERCLEANFILES = Makefile.in

INCLUDES                =  -I$(top_srcdir)/src \
	-I$(top_srcdir)/examples/tests
	
noinst_LTLIBRARIES      = libtest.la 

libtest_la_SOURCES  = AnalysisTest.cpp  \
	AnalyzersTest.cpp  \
	HighFreqTerms.cpp  \
	SearchTest.cpp  \
	SearchTestForDuplicates.cpp  \
	StoreTest.cpp  \
	TestDateFilter.cpp  \
	TestPriorityQueue.cpp  \
	TestQueryParser.cpp  \
	TestWildcard.cpp