indexdir = $(lsrcdir)/index
indexhdir = $(includedir)/CLucene/index
 
libclucene_la_SOURCES     += $(indexdir)/DocumentWriter.cpp  
libclucene_la_SOURCES     += $(indexdir)/SegmentMergeInfo.cpp
libclucene_la_SOURCES     += $(indexdir)/SegmentsReader.cpp
libclucene_la_SOURCES     += $(indexdir)/FieldInfos.cpp
libclucene_la_SOURCES     += $(indexdir)/SegmentMergeQueue.cpp
libclucene_la_SOURCES     += $(indexdir)/Term.cpp
libclucene_la_SOURCES     += $(indexdir)/FieldsReader.cpp
libclucene_la_SOURCES     += $(indexdir)/SegmentMerger.cpp
libclucene_la_SOURCES     += $(indexdir)/TermInfo.cpp
libclucene_la_SOURCES     += $(indexdir)/FieldsWriter.cpp
libclucene_la_SOURCES     += $(indexdir)/SegmentReader.cpp
libclucene_la_SOURCES     += $(indexdir)/TermInfosReader.cpp
libclucene_la_SOURCES     += $(indexdir)/IndexReader.cpp
libclucene_la_SOURCES     += $(indexdir)/SegmentTermDocs.cpp
libclucene_la_SOURCES     += $(indexdir)/TermInfosWriter.cpp
libclucene_la_SOURCES     += $(indexdir)/IndexWriter.cpp
libclucene_la_SOURCES     += $(indexdir)/SegmentTermEnum.cpp
libclucene_la_SOURCES     += $(indexdir)/SegmentInfos.cpp
libclucene_la_SOURCES     += $(indexdir)/SegmentTermPositions.cpp

indexh_HEADERS	=   $(indexdir)/*.h