searchdir = $(lsrcdir)/search
searchhdir = $(includedir)/CLucene/search
 
libclucene_la_SOURCES  += $(searchdir)/BooleanQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/IndexSearcher.cpp
libclucene_la_SOURCES  += $(searchdir)/Similarity.cpp
libclucene_la_SOURCES  += $(searchdir)/BooleanScorer.cpp
libclucene_la_SOURCES  += $(searchdir)/MultiTermQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/SloppyPhraseScorer.cpp
libclucene_la_SOURCES  += $(searchdir)/DateFilter.cpp
libclucene_la_SOURCES  += $(searchdir)/PhrasePositions.cpp
libclucene_la_SOURCES  += $(searchdir)/TermQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/ExactPhraseScorer.cpp
libclucene_la_SOURCES  += $(searchdir)/PhraseQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/TermScorer.cpp
libclucene_la_SOURCES  += $(searchdir)/FilteredTermEnum.cpp
libclucene_la_SOURCES  += $(searchdir)/PhraseScorer.cpp
libclucene_la_SOURCES  += $(searchdir)/TopDocs.cpp
libclucene_la_SOURCES  += $(searchdir)/HitQueue.cpp
libclucene_la_SOURCES  += $(searchdir)/PrefixQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/WildcardQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/Hits.cpp
libclucene_la_SOURCES  += $(searchdir)/RangeQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/WildcardTermEnum.cpp
libclucene_la_SOURCES  += $(searchdir)/FuzzyQuery.cpp
libclucene_la_SOURCES  += $(searchdir)/MultiSearcher.cpp

searchh_HEADERS	=  $(searchdir)/*.h
