storedir = $(lsrcdir)/store
storehdir = $(includedir)/CLucene/store
 
libclucene_la_SOURCES     += $(storedir)/FSDirectory.cpp
libclucene_la_SOURCES     += $(storedir)/InputStream.cpp
libclucene_la_SOURCES     += $(storedir)/Lock.cpp
libclucene_la_SOURCES     += $(storedir)/OutputStream.cpp
libclucene_la_SOURCES     += $(storedir)/RAMDirectory.cpp
libclucene_la_SOURCES     += $(storedir)/TransactionalRAMDirectory.cpp
 
storeh_HEADERS		=  $(storedir)/*.h
