utildir = $(lsrcdir)/util
utilhdir = $(includedir)/CLucene/util
 
libclucene_la_SOURCES        += $(utildir)/Arrays.cpp
libclucene_la_SOURCES        += $(utildir)/FastCharStream.cpp
libclucene_la_SOURCES        += $(utildir)/Reader.cpp
libclucene_la_SOURCES        += $(utildir)/BitVector.cpp
libclucene_la_SOURCES        += $(utildir)/Misc.cpp
libclucene_la_SOURCES        += $(utildir)/StringBuffer.cpp
 
utilh_HEADERS	=  $(utildir)/*.h
